--- a/checkout.html
+++ b/checkout.html
@@ -13,7 +13,7 @@
 <textarea id="address" placeholder="Address" class="border p-2 w-full mb-2"></textarea>
 
 <h2 class="font-bold mt-4">Pay via e-Wallet</h2>
-<img src="https://via.placeholder.com/200" class="my-4">
+<img src="assets/QR.jpeg" class="my-4">
 
 <input id="txn" placeholder="Transaction ID" class="border p-2 w-full mb-4">
 
