--- a/cart.html
+++ b/cart.html
@@ -1,23 +1,143 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Cart – beyondsize</title>
+  <meta charset="UTF-8">
+  <title>Cart | beyondsize</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
+  <style>
+    .cart-container {
+      max-width: 900px;
+      margin: 50px auto;
+      background: #fff;
+      padding: 20px;
+      border-radius: 12px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.1);
+    }
+    h1 { text-align: center; margin-bottom: 25px; }
+    .cart-item {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      border-bottom: 1px solid #eee;
+      padding: 15px 0;
+    }
+    .cart-item img {
+      width: 100px;
+      height: 100px;
+      object-fit: cover;
+      border-radius: 10px;
+    }
+    .item-details {
+      flex: 1;
+      margin-left: 20px;
+    }
+    .item-details h4 { margin: 0 0 5px 0; }
+    .item-details p { margin: 0; color: #555; }
+    .quantity input {
+      width: 60px;
+      text-align: center;
+      padding: 5px;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+    }
+    .total {
+      text-align: right;
+      font-size: 22px;
+      margin-top: 20px;
+      font-weight: bold;
+    }
+    .checkout-btn {
+      display: block;
+      width: 100%;
+      text-align: center;
+      background: #ff6f61;
+      color: #fff;
+      padding: 15px;
+      margin-top: 20px;
+      border: none;
+      border-radius: 12px;
+      font-size: 18px;
+      cursor: pointer;
+      text-decoration: none;
+    }
+    .remove-btn {
+      background: transparent;
+      border: none;
+      color: red;
+      cursor: pointer;
+      font-size: 14px;
+    }
+  </style>
 </head>
 <body>
 
-<header>
-  <div class="logo">
-    <img src="assets/logo.png">
-  </div>
-</header>
+<nav class="navbar">
+  <div class="logo">beyondsize</div>
+  <ul class="nav-links">
+    <li><a href="index.html">Home</a></li>
+    <li><a href="shop.html">Shop</a></li>
+    <li><a href="cart.html">Cart (<span id="cart-count">0</span>)</a></li>
+  </ul>
+</nav>
 
-<section style="padding:60px; max-width:800px;">
-  <h2>Your cart</h2>
-  <div id="cart"></div>
-  <a href="checkout.html" class="btn">Proceed to checkout</a>
+<section class="cart-container">
+  <h1>Your Cart</h1>
+  <div id="cart-items"></div>
+  <div class="total">Total: Rs. <span id="totalAmount">0</span></div>
+  <a href="checkout.html" class="checkout-btn">Proceed to Checkout</a>
 </section>
 
 <script src="js/cart.js"></script>
+<script>
+const cartItemsDiv = document.getElementById('cart-items');
+const totalAmountSpan = document.getElementById('totalAmount');
+
+function displayCart() {
+  const cart = JSON.parse(localStorage.getItem('cart')) || [];
+  cartItemsDiv.innerHTML = '';
+  let total = 0;
+
+  cart.forEach((item, index) => {
+    total += item.price * item.quantity;
+
+    const div = document.createElement('div');
+    div.className = 'cart-item';
+    div.innerHTML = `
+      <img src="${item.image}" alt="${item.name}">
+      <div class="item-details">
+        <h4>${item.name}</h4>
+        <p>Rs.${item.price}</p>
+      </div>
+      <div class="quantity">
+        <input type="number" min="1" value="${item.quantity}" onchange="updateQuantity(${index}, this.value)">
+      </div>
+      <button class="remove-btn" onclick="removeItem(${index})">Remove</button>
+    `;
+    cartItemsDiv.appendChild(div);
+  });
+
+  totalAmountSpan.innerText = total;
+}
+
+function updateQuantity(index, value) {
+  const cart = JSON.parse(localStorage.getItem('cart'));
+  cart[index].quantity = parseInt(value);
+  localStorage.setItem('cart', JSON.stringify(cart));
+  displayCart();
+  updateCartCount();
+}
+
+function removeItem(index) {
+  const cart = JSON.parse(localStorage.getItem('cart'));
+  cart.splice(index, 1);
+  localStorage.setItem('cart', JSON.stringify(cart));
+  displayCart();
+  updateCartCount();
+}
+
+displayCart();
+updateCartCount();
+</script>
 </body>
 </html>
