--- a/index.html
+++ b/index.html
@@ -1,34 +1,47 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8" />
   <title>beyondsize</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 
-<header>
-  <div class="logo">
-    <img src="assets/logo.jpg" alt="beyondsize">
-  </div>
-  <nav>
-    <a href="shop.html">SHOP</a>
-    <a href="cart.html">CART</a>
-  </nav>
-</header>
+  <!-- NAVBAR -->
+ <nav class="navbar">
+  <div class="logo">beyondsize</div>
+  <ul class="nav-links">
+    <li><a href="index.html">Home</a></li>
+    <li><a href="shop.html">Shop</a></li>
+    <li><a href="cart.html">Cart (<span id="cart-count">0</span>)</a></li>
+  </ul>
+</nav>
 
-<section class="hero">
-  <h1>
-    Beyond size,<br>
-    beyond limits
-  </h1>
-  <p>
-    Thoughtfully designed oversized essentials
-    for comfort, balance, and everyday wear.
-  </p>
 
-  <a href="shop.html" class="btn">Explore collection</a>
-</section>
+  <!-- HERO -->
+  <section class="hero-bs">
+    <div class="hero-inner">
+      <h1>beyondsize</h1>
+      <p>essentials designed beyond limits</p>
+      <a href="shop.html" class="btn-outline">view collection</a>
+    </div>
+  </section>
+
+  <!-- EDITORIAL SECTION -->
+  <section class="editorial">
+    <h2>Designed Beyond Standard</h2>
+    <p>
+      beyondsize focuses on fit, comfort, and simplicity.
+      No noise. Just essentials made right.
+    </p>
+  </section>
+
+  <!-- FOOTER -->
+  <footer class="footer">
+    <p>© 2026 beyondsize</p>
+  </footer>
 
 </body>
 </html>
-
