--- a/shop.html
+++ b/shop.html
@@ -1,23 +1,60 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Shop – beyondsize</title>
+  <meta charset="UTF-8" />
+  <title>Shop | beyondsize</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 
-<header>
-  <div class="logo">
-    <img src="assets/logo.jpg">
-  </div>
-  <nav>
-    <a href="shop.html">SHOP</a>
-    <a href="cart.html">CART</a>
+  <!-- NAVBAR -->
+  <nav class="navbar">
+    <div class="logo">beyondsize</div>
+    <ul class="nav-links">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="shop.html">Shop</a></li>
+      <li><a href="cart.html">Cart (<span id="cart-count">0</span>)</a></li>
+    </ul>
   </nav>
-</header>
 
-<section class="products" id="products"></section>
+  <!-- SHOP HEADER -->
+  <section class="shop-header">
+    <h1>Shop</h1>
+  </section>
 
-<script src="js/shop.js"></script>
+  <!-- PRODUCT GRID -->
+  <section class="shop-container">
+
+    <div class="product-card">
+      <img src="assets/red-scarf.jpg" alt="Product 1">
+      <h3>Red Crochet Scarf</h3>
+      <p>Rs. 999</p>
+      <button onclick="addToCart('Red Crochet Scarf', 999)">Add to Cart</button>
+    </div>
+
+    <div class="product-card">
+      <img src="assets/blue-scarf.jpg" alt="Product 2">
+      <h3>Blue Crochet Scarf</h3>
+      <p>Rs. 999</p>
+      <button onclick="addToCart('Blue Crochet Scarf','assets/blue-scarf.jpg' 999)">Add to Cart</button>
+    </div>
+
+    <div class="product-card">
+      <img src="assets/black-scarf.jpg" alt="Product 3">
+      <h3>Black Crochet Scarf</h3>
+      <p>Rs. 999</p>
+      <button onclick="addToCart('Black Crochet Scarf', 999,'assets/black-scarf.jpg')">Add to Cart</button>
+    </div>
+
+  </section>
+
+  <!-- FOOTER -->
+  <footer class="footer">
+    <p>© 2026 beyondsize</p>
+  </footer>
+
+  <script src="js/cart.js"></script>
 </body>
 </html>
